--- a/css/layout.css
+++ b/css/layout.css
@@ -65,15 +65,15 @@ header .banner-text h1 {
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
-   font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #FFFF00;
+   font: 30px/1.9em 'librebaskerville-regular', serif;
+   color: #000;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color:#FFFF00;
+   color:#000;
 }
 header .banner-text hr {
    width: 60%;
