--- a/css/layout.css
+++ b/css/layout.css
@@ -69,7 +69,7 @@ header .banner-text h3 {
    color: #f00;
    margin: 0 auto;
    width: 70%;
-   
+   text-shadow: 0px 1px 2px rgba(255, 255, 0, .9);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
