--- a/css/layout.css
+++ b/css/layout.css
@@ -66,14 +66,14 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 30px/1.9em 'librebaskerville-regular', serif;
-   color: #f00;
+   color: #000;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(255, 255, 0, .9);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color:#f00;
+   color:#000;
 }
 header .banner-text hr {
    width: 60%;
