--- a/css/layout.css
+++ b/css/layout.css
@@ -65,7 +65,7 @@ header .banner-text h1 {
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
-   font: 20px/1.1em sans-serif;
+   font: 30px sans-serif;
    color: #fff;
    margin: 0 auto;
    width: 50%;
